test/scc_test/stmt/semantic-errors/015.t
void test()
{
    goto label;
    label:
        ;
    label:
        ;
}